# topolang

./: CMakeLists.txt  LICENSE  readme.md
examples/: box.tl  demo.c  tower.tl
examples/chair/: back.tl  chair.tl  legs.tl
include/: arena.h  ast.h  eval.h  intrinsics.h  mesh.h  token.h  topolang.h
src/: arena.c  eval.c  gltf.c  intrinsics.c  lexer.c  mesh.c  obj.c  parser.c  topolang.c  util.h
